<?xml version="1.0"?>
<package format="2">
  <name>carla_yolo_ros</name>
  <version>1.0.0</version>
  <description>ROS integration for CARLA autonomous vehicle with YOLOv3 object detection</description>
  <maintainer email="lihuashi@todo.todo">lihuashi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
</package>