<?xml version="1.0"?>
<package format="2">
  <name>carla_rl_ros</name>
  <version>0.1.0</version>
  <description>ROS wrapper for CARLA RL (0.9.14)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
